[package]
name = "thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
flac = "0.5.0"
plotters = "0.3.4"
rustfft = "6.1.0"
serde = "1.0.151"
tokio = { version = "1.23.0", features = ["full"]}
